--- a/Utility/Utility.csproj
+++ b/Utility/Utility.csproj
@@ -65,6 +65,7 @@
   <ItemGroup>
     <Compile Include="AnsiString.cs" />
     <Compile Include="ConfigBase.cs" />
+    <Compile Include="CRCCheck.cs" />
     <Compile Include="LogManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security.cs" />
