--- a/Utility/log4net.config
+++ b/Utility/log4net.config
@@ -7,12 +7,45 @@
 		<param name="StaticLogFileName" value="false"/>
 		<param name="DatePattern" value="yyyy-MM-dd&quot;.log&quot;"/>
 		<param name="RollingStyle" value="Date"/>
+		<param name="Encoding" value="utf-8" />
 		<layout type="log4net.Layout.PatternLayout">
 			<param name="ConversionPattern" value="%d - %m%n"/>
 		</layout>
 	</appender>
+	<appender name="SQLite" type="log4net.Appender.AdoNetAppender">
+		<bufferSize value="100" />
+		<connectionType value="System.Data.SQLite.SQLiteConnection, System.Data.SQLite, Version=1.0.103.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139" />
+		<connectionString value="Data Source=logs\\log4net.db3;Version=3;" />
+		<commandText value="INSERT INTO Log (Date, Level, Logger, Message) VALUES (@Date, @Level, @Logger, @Message)" />
+		<parameter>
+			<parameterName value="@Date" />
+			<dbType value="DateTime" />
+			<layout type="log4net.Layout.RawTimeStampLayout" />
+		</parameter>
+		<parameter>
+			<parameterName value="@Level" />
+			<dbType value="String" />
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%level" />
+			</layout>
+		</parameter>
+		<parameter>
+			<parameterName value="@Logger" />
+			<dbType value="String" />
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%logger" />
+			</layout>
+		</parameter>
+		<parameter>
+			<parameterName value="@Message" />
+			<dbType value="String" />
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%message" />
+			</layout>
+		</parameter>
+	</appender>
 	<root>
-		<level value="DEBUG" />
-		<appender-ref ref="RollingLogFileAppender" />
+		<level value="ALL" />
+		<appender-ref ref="SQLite" />
 	</root>
 </log4net>
