--- a/Tester/Tester.csproj
+++ b/Tester/Tester.csproj
@@ -98,6 +98,12 @@
     <Compile Include="MainEntry.Designer.cs">
       <DependentUpon>MainEntry.cs</DependentUpon>
     </Compile>
+    <Compile Include="fModbusTcpMaster.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fModbusTcpMaster.Designer.cs">
+      <DependentUpon>fModbusTcpMaster.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FAsyncUdpServer.cs">
@@ -117,6 +123,12 @@
     </Compile>
     <Compile Include="FPing.Designer.cs">
       <DependentUpon>FPing.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FWebSocketServer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FWebSocketServer.Designer.cs">
+      <DependentUpon>FWebSocketServer.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -150,12 +162,22 @@
     <EmbeddedResource Include="FPing.resx">
       <DependentUpon>FPing.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="fModbusTcpMaster.resx">
+      <DependentUpon>fModbusTcpMaster.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FWebSocketServer.resx">
+      <DependentUpon>FWebSocketServer.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="app.manifest" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Modbus\Modbus.csproj">
+      <Project>{2311285D-3524-4899-A366-69E8BC7E4769}</Project>
+      <Name>Modbus</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Net\Net.csproj">
       <Project>{44AE83EF-4C5A-4EFF-9B41-1060DB88FA63}</Project>
       <Name>Net</Name>
@@ -164,6 +186,17 @@
       <Project>{C57DD321-BD35-4BE4-B038-2B0672B6A32C}</Project>
       <Name>Utility</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Web\jquery-ui.min.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Web\jquery.min.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Web\Test.htm">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
