新增擴充函示
並改用新擴充函示

--- a/Utility/Utility.csproj
+++ b/Utility/Utility.csproj
@@ -67,6 +67,7 @@
     <Compile Include="AnsiString.cs" />
     <Compile Include="ConfigBase.cs" />
     <Compile Include="CRCCheck.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="LogManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security.cs" />
