--- a/Utility/Utility.csproj
+++ b/Utility/Utility.csproj
@@ -66,11 +66,11 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AnsiCsiBuilder.cs" />
-    <Compile Include="AnsiString.cs" />
+    <Compile Include="Ansi\CsiBuilder.cs" />
+    <Compile Include="Ansi\AnsiString.cs" />
     <Compile Include="ConfigBase.cs" />
     <Compile Include="CRCCheck.cs" />
-    <Compile Include="MessageBox.cs">
+    <Compile Include="WinKits\MessageBox.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Extensions.cs" />
@@ -80,6 +80,12 @@
     <Compile Include="SysPerformance.cs" />
     <Compile Include="ThreadSafeCollection.cs" />
     <Compile Include="Utils.cs" />
+    <Compile Include="WinKits\AnsiBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="WinKits\AnsiLabel.cs">
+      <SubType>Component</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
@@ -105,7 +111,7 @@
     <None Include="log4net.db3" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="MessageBox.resx">
+    <EmbeddedResource Include="WinKits\MessageBox.resx">
       <DependentUpon>MessageBox.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
