修改測試/展示程式

--- a/Tester/Tester.csproj
+++ b/Tester/Tester.csproj
@@ -130,6 +130,11 @@
     <Compile Include="FWebSocketServer.Designer.cs">
       <DependentUpon>FWebSocketServer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="FActivePorts.resx">
@@ -167,6 +172,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FWebSocketServer.resx">
       <DependentUpon>FWebSocketServer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
