--- a/Net/Net.csproj
+++ b/Net/Net.csproj
@@ -64,23 +64,25 @@
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SslTcp.cs" />
+    <Compile Include="Http\_init_.cs" />
     <Compile Include="TelnetServer.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="WebAPIBase.cs" />
+    <Compile Include="Http\WebAPIBase.cs" />
     <Compile Include="AsyncUDP.cs" />
-    <Compile Include="Common.cs" />
-    <Compile Include="ExtWebClient.cs">
+    <Compile Include="_init_.cs" />
+    <Compile Include="Http\ExtWebClient.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="HttpServiceBase.cs" />
+    <Compile Include="Http\HttpBase.cs" />
     <Compile Include="PingTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AsyncServer.cs" />
     <Compile Include="AsyncClient.cs" />
     <Compile Include="TcpManager.cs" />
     <Compile Include="MulticastSocket.cs" />
-    <Compile Include="WebSocket.cs" />
+    <Compile Include="Http\WebSocket.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
