--- a/Net/Net.csproj
+++ b/Net/Net.csproj
@@ -60,12 +60,17 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\portable-net40+sl4+win8+wp8\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web" />
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SslTcp.cs" />
+    <Compile Include="Ssl\SslTcpServer.cs" />
+    <Compile Include="Ssl\SslTcpClient.cs" />
     <Compile Include="Http\_init_.cs" />
+    <Compile Include="Ssl\_init_.cs" />
     <Compile Include="TelnetServer.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -106,6 +111,9 @@
       <Project>{C57DD321-BD35-4BE4-B038-2B0672B6A32C}</Project>
       <Name>Utility</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
