--- a/WinKits/WinKits.csproj
+++ b/WinKits/WinKits.csproj
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{2311285D-3524-4899-A366-69E8BC7E4769}</ProjectGuid>
+    <ProjectGuid>{B82A2FFA-90B9-4687-AE00-B868085A3E07}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CJF.Modbus</RootNamespace>
-    <AssemblyName>CJF.Modbus</AssemblyName>
+    <RootNamespace>CJF.Utility.WinKits</RootNamespace>
+    <AssemblyName>CJF.Utility.WinKits</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -21,7 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>..\bin\Debug\CJF.Modbus.xml</DocumentationFile>
+    <DocumentationFile>..\bin\Debug\CJF.Utility.WinKits.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,40 +30,32 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>..\bin\Release\CJF.Modbus.xml</DocumentationFile>
+    <DocumentationFile>..\bin\Release\CJF.Utility.WinKits.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IMaster.cs" />
-    <Compile Include="ModbusBase.cs" />
-    <Compile Include="Protocol.cs" />
-    <Compile Include="TcpMaster.cs" />
+    <Compile Include="AnsiBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="AnsiLabel.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="MessageBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="_init_.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Net\Net.csproj">
-      <Project>{44AE83EF-4C5A-4EFF-9B41-1060DB88FA63}</Project>
-      <Name>Net</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Utility\Utility.csproj">
-      <Project>{C57DD321-BD35-4BE4-B038-2B0672B6A32C}</Project>
+      <Project>{c57dd321-bd35-4be4-b038-2b0672b6a32c}</Project>
       <Name>Utility</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
